# jsonnet

./: .BUILD.swp  .bazelignore  .cproject  .craft.yml  .gitattributes  .gitignore  .index.html.swo  .index.html.swp  .project  .travis.yml  BUILD  BUILD~  CMakeLists.txt  CMakeLists.txt.in  CNAME  CONTRIBUTING  Dockerfile  GoogleTestCMakeLists.txt.in  MANIFEST.in  MODULE.bazel  Makefile  PYTHON_README.md  RE2CMakeLists.txt.in  README  README.md  WORKSPACE  _jsonnet.c  abs.fragment  assertEqual.fragment  ast.h  filterMap.fragment  foldL.fragment  foldR.fragment  format.fragment  index.html  index.html~  join.fragment  jsonnet.cpp  jsonnet_test_file.py  jsonnet_test_snippet.py  (+25 more)
_includes/: .demo.inc.swp  demo.inc~
_layouts/: default.html~
articles/: comparisons.html  design.html  fractal.1.html  fractal.2.html  fractal.3.html  kubernetes.html  output-formats.html
benchmarks/: .gitignore  BUILD  bench.01.jsonnet  bench.02.jsonnet  bench.03.jsonnet  bench.04.jsonnet  bench.06.jsonnet  bench.07.jsonnet  bench.08.jsonnet  bench.09.jsonnet  gen_big_object.jsonnet  regen_benchmarks.sh
case_studies/: casestudy_fractal.1.html  casestudy_fractal.2.html  index.html~
cmd/: BUILD  CMakeLists.txt  jsonnet.cpp  jsonnetfmt.cpp  utils.cpp  utils.h
core/: BUILD  CMakeLists.txt  ast.h  desugarer.cpp  desugarer.h  desugaring.cpp  desugaring.h  formatter.cpp  formatter.h  hash.cpp  hash.h  json.h  lexer.cpp  lexer.h  lexer_test.cc  lexer_test.cpp  libjsonnet.cpp  libjsonnet.h  libjsonnet_native_callbacks_test.c  libjsonnet_test.cc  libjsonnet_test.cpp  libjsonnet_test_file.c  libjsonnet_test_locale.cpp  libjsonnet_test_snippet.c  parser.cpp  parser.h  parser_test.cpp  pass.cpp  pass.h  path_utils.cpp  path_utils.h  state.h  static_analysis.cpp  static_analysis.h  static_error.h  string.h  string_utils.cpp  string_utils.h  unicode.h  unicode_test.cpp  (+2 more)
cpp/: BUILD  CMakeLists.txt  libjsonnet++.cc  libjsonnet++.cpp  libjsonnet++_test.cc  libjsonnet++_test.cpp  libjsonnet_test_locale.cpp
cpp/testdata/: BUILD  invalid.out
css/: .cellphone-small.css.swp  .cellphone.css.swp  .desktop.css.swp  .doc.css.swp  cellphone-small.css~  cellphone.css~  desktop.css~  doc.css~
doc/: .gitignore  Makefile  _config.yml  bindings.html  bindings.html.jinja  casestudies.html  casestudies.html.jinja  casestudy_fractal.1.html  casestudy_fractal.1.html.jinja  casestudy_fractal.2.html  casestudy_fractal.2.html.jinja  casestudy_fractal.3.html  casestudy_fractal.3.html.jinja  casestudy_fractal.html  casestudy_fractal.html.jinja  commandline.html  commandline.html.jinja  comparisons.html  comparisons.html.jinja  contributing.html  contributing.html.jinja  cpp.html  cpp.html.jinja  demo.html  demo.html.jinja  design.html  design.html.jinja  doc.css  footer.html.jinja  header.html.jinja  implementation.html  implementation.html.jinja  index.html  index.html.jinja  javascript.html  javascript.html.jinja  language.html  language.html.jinja  learning.html  libjsonnet.js  (+13 more)
doc/js/: demo.js  (+3 more)
docs/: stdlib.html  stdlib.html~  tutorial.html  tutorial.html~
examples/: BUILD  arith.jsonnet  bar_menu.1.jsonnet  bar_menu.10.jsonnet  bar_menu.11.jsonnet  bar_menu.11.jsonnet.golden  bar_menu.2.jsonnet  bar_menu.3.jsonnet  bar_menu.3.jsonnet.golden  bar_menu.4.jsonnet  bar_menu.5.jsonnet  bar_menu.6.jsonnet  bar_menu.7.jsonnet  bar_menu.8.jsonnet  bar_menu.8.jsonnet.golden  bar_menu.9.jsonnet  bar_menu.9.jsonnet.fmt.golden  bar_menu_utils.jsonnet  build_example.jsonnet  check.sh  cocktail-comprehensions.jsonnet  comprehensions.jsonnet  computed-fields.jsonnet  conditionals.jsonnet  conditionals.jsonnet.golden  error-examples.jsonnet  error-examples.jsonnet.golden  example_operators.jsonnet  functions.jsonnet  functions.jsonnet.golden  hidden_fields.jsonnet  imports.jsonnet  inner-reference.jsonnet  landingpage.jsonnet  library-ext.libsonnet  library-tla.libsonnet  martinis.jsonnet  martinis.libsonnet  mixins.jsonnet  negroni.jsonnet  (+17 more)
examples/cmake/: CMakeLists.txt  main.cpp
gc_stress/: long_chains.jsonnet
gcp/: fractal.jsonnet  fractal2.jsonnet
implementation/: bindings.html  bindings.html~  commandline.html  commandline.html~  cpp.html~  javascript.html~  tests.html~
include/: BUILD  CMakeLists.txt  libjsonnet++.h  libjsonnet.h  libjsonnet_fmt.h
js/: .demo.js.swp  codemirror-mode-jsonnet.js  demo.js  demo.js~  libjsonnet.js
language/: .spec.html.swp  comparisons.html  comparisons.html~  design.html  design.html~  index.html  spec.html  spec.html~
learning/: community.html  getting_started.html  tools.html  tutorial.html  tutorial.html~  tutorial2.html
perf_tests/: large_string_join.jsonnet  realistic2.jsonnet
platform_defs/: BUILD
production/: contributing.html  index.html
python/: BUILD  CMakeLists.txt  _jsonnet.c  _jsonnet_test.py  jsonnet_test_file.py  jsonnet_test_snippet.py  run_tests.sh  test.jsonnet
python/testdata/: trivial.jsonnet  trivial_no_eol.jsonnet
ref/: bindings.html  language.html  language.html.html  language.html~  spec.html  spec.html~  stdlib.html  stdlib.html~
stdlib/: BUILD  CMakeLists.txt  std.jsonnet  testing.jsonnet  to_c_array.cpp  truth.jsonnet
test_cmd/: BUILD  cmd_tests.source  eval.golden.stderr.cpp  eval.golden.stderr.golang  ext3.golden.stderr  ext3.golden.stderr.golang  extWithDefault3.golden.stdout  fmt1.golden.stdout  fmt_help.golden.stdout  fmt_help.golden.stdout.cpp  fmt_help.golden.stdout.golang  fmt_inplace.golden.stdout  fmt_no_args.golden.stderr  fmt_no_args.golden.stderr.golang  fmt_simple5.golden.stderr  fmt_simple_test5.stdin  fmt_simple_test6.golden.stdout  fmt_version1.golden.stdout  fmt_version2.golden.stdout  help.golden.stdout  help.golden.stdout.cpp  help.golden.stdout.go  help.golden.stdout.golang  jpath10.golden.stdout  jpath9.golden.stdout  jsonnet_path1.golden.stdout  jsonnet_path2.golden.stdout  max_stack1.golden.stderr.go  max_stack2.golden.stderr  max_stack4.golden.stderr.go  max_stack4.golden.stdout.golang  max_stack5.golden.stderr  max_stack6.golden.stderr  max_trace1.golden.stderr.go  max_trace3.golden.stderr.go  max_trace4.golden.stderr.go  (+27 more)
(+577 files in other folders)
